avances en auth